# simple_crawler_web

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: count.rs  crawl.rs  list.rs  main.rs  store.rs
